# example_rust

./: .gitignore  Cargo.toml  Makefile  README.md  shell.nix
.github/workflows/: rust.yml
benches/: bench1.rs
src/: lib.rs  main.rs  source1.rs
